<resources>
    <string name="app_name">Maxwel\'s</string>
    <string name="titulo">iProva</string>
    <string name="gerenciarCardapio">Gerenciar Cardápio</string>
    <string name="novopedido">Novo Pedido</string>
    <string name="historicoPedido">Histórico de Pedidos</string>
    <string name="popular">Popular BD</string>
    <string name="menu">Menu</string>
    <string name="gerenciar">Gerenciar</string>
    <string name="voltar">Voltar</string>
    <string name="novoitem">Novo Item</string>
    <string name="editarItem">Editar Item</string>
    <string name="nomeLabel">Nome: </string>
    <string name="preco">Preço: </string>
    <string name="carregar">Carregar Imagem</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cardapio">Cardapio</string>
    <string name="zero">0</string>
    <string name="pedido">Pedido</string>
    <string name="totalPagar">Total R$ 0,00</string>
    <string name="formaPagamento">Forma de Pagamento</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="credito">Cartão de Crédito</string>
    <string name="debito">Cartão de Débito</string>
    <string name="entrega">Endereço de Entrega</string>
    <string name="fechar">Fechar Pedido</string>
    <string name="sublinhado">___________</string>
    <string name="telaInicial">Tela Inicial</string>
    <string name="resumo">Resumo do Pedido</string>
    <string name="historico">Histórico</string>
    <string name="visualizar">Visualizar</string>
    <string name="valorItem">R$ 0,00</string>
    <string name="itemExemplo">Item 1</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="itemExemploExtra">Big Bacon Triplo Classico</string>
</resources>