<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_height="match_parent"
android:layout_width="match_parent"
android:orientation="horizontal"
android:layout_gravity="center_vertical">
<ImageView
    android:layout_width="0dp"
    android:layout_height="130dp"
    android:layout_weight="3"
    android:src="@drawable/big_bacon_triplo_classico"
    android:id="@+id/ivItem"/>

    <TextView
        android:id="@+id/tvItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_weight="5"
        android:text="@string/itemExemploExtra" />
    <TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:layout_marginLeft="10dp"
    android:id="@+id/tvItemPreco" />

    <Button
        android:id="@+id/btnEditarItemGerenciar"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:background="#612196F3"
        android:text="@string/editar" />

    <Button
        android:id="@+id/btnRemoverItemGerenciar"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:background="#612196F3"
        android:text="@string/remover" />
</LinearLayout>