<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pedido">

    <TextView
        android:id="@+id/enderecoEntregaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrega"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formasPagamentoEscolha"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sublinhado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sublinhado"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enderecoEntregaLabel"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ViewLabelPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedido"
        android:textColor="#121111"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarPedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/menuLinesPedido"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menuLinesPedido"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarPedido"
        app:layout_constraintEnd_toEndOf="@+id/toolbarPedido"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/toolbarPedido"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_lines_icon" />

    <ImageView
        android:id="@+id/menuSetaPedido"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarPedido"
        app:layout_constraintEnd_toEndOf="@+id/toolbarPedido"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/ViewLabelPedido"
        app:layout_constraintTop_toTopOf="@+id/toolbarPedido"
        app:layout_constraintVertical_bias="0.63"
        app:srcCompat="@drawable/drop_down_arrow" />

    <ImageView
        android:id="@+id/tresPontosPedido"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarPedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/menuSetaPedido"
        app:layout_constraintTop_toTopOf="@+id/toolbarPedido"
        app:srcCompat="@drawable/three_dots_vertical_icon" />

    <Button
        android:id="@+id/btnVoltarPedido"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:background="#03DAC5"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarPedido"
        app:layout_constraintEnd_toStartOf="@+id/tresPontosPedido"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/menuSetaPedido"
        app:layout_constraintTop_toTopOf="@+id/toolbarPedido" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarPedido"
        app:layout_constraintVertical_bias="0.0">

        <ListView
            android:id="@+id/lvPedido"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/TotalPagarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalPagar"
        android:textColor="#050505"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/FormaPagamentoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formaPagamento"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/sublinhado1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sublinhado"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FormaPagamentoLabel"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/formasPagamentoEscolha"
        android:layout_width="409dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sublinhado1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtEnderecoEntrega"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sublinhado2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnFecharPedido"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#6A03A9F4"
        android:text="@string/fechar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEnderecoEntrega"
        app:layout_constraintVertical_bias="0.17000002" />


</androidx.constraintlayout.widget.ConstraintLayout>