<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Editar">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ViewLabelEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editarItem"
        android:textColor="#121111"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/menuLinesEditar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menuLinesEditar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarEditar"
        app:layout_constraintEnd_toEndOf="@+id/toolbarEditar"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/toolbarEditar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_lines_icon" />

    <ImageView
        android:id="@+id/menuSetaEditar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarEditar"
        app:layout_constraintEnd_toEndOf="@+id/toolbarEditar"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/ViewLabelEditar"
        app:layout_constraintTop_toTopOf="@+id/toolbarEditar"
        app:layout_constraintVertical_bias="0.63"
        app:srcCompat="@drawable/drop_down_arrow" />

    <ImageView
        android:id="@+id/tresPontosEditar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/menuSetaEditar"
        app:layout_constraintTop_toTopOf="@+id/toolbarEditar"
        app:srcCompat="@drawable/three_dots_vertical_icon" />

    <TextView
        android:id="@+id/nomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomeLabel"
        android:textColor="#0C0B0B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEditar"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/precoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        android:textColor="#0C0B0B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toEndOf="@+id/nomeLabel"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEditar"
        app:layout_constraintVertical_bias="0.060000002" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeLabel"
        app:layout_constraintVertical_bias="0.01999998" />

    <EditText
        android:id="@+id/edtPreco"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toEndOf="@+id/edtName"
        app:layout_constraintTop_toBottomOf="@+id/precoLabel"
        app:layout_constraintVertical_bias="0.01999998" />

    <ImageView
        android:id="@+id/imgEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@drawable/img_placeholder" />

    <Button
        android:id="@+id/btnCarregarImg"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="#7E00BCD4"
        android:text="@string/carregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/imgEditar"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        app:layout_constraintVertical_bias="0.13999999" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="#9BDFFD"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEditar"
        app:layout_constraintVertical_bias="0.120000005" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="#9BDFFD"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/btnSalvar"
        app:layout_constraintTop_toBottomOf="@+id/imgEditar"
        app:layout_constraintVertical_bias="0.120000005" />


</androidx.constraintlayout.widget.ConstraintLayout>