<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resumo">

    <TextView
        android:id="@+id/enderecoEntregaLabelResumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrega"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formasPagamentoEscolhaResumo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sublinhado4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sublinhado"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enderecoEntregaLabelResumo"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarResumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ViewLabelResumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumo"
        android:textColor="#121111"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarResumo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/menuLinesResumo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menuLinesResumo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarResumo"
        app:layout_constraintEnd_toEndOf="@+id/toolbarResumo"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/toolbarResumo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_lines_icon" />

    <ImageView
        android:id="@+id/menuSetaResumo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarResumo"
        app:layout_constraintEnd_toEndOf="@+id/toolbarResumo"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/ViewLabelResumo"
        app:layout_constraintTop_toTopOf="@+id/toolbarResumo"
        app:layout_constraintVertical_bias="0.63"
        app:srcCompat="@drawable/drop_down_arrow" />

    <ImageView
        android:id="@+id/tresPontosResumo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarResumo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/menuSetaResumo"
        app:layout_constraintTop_toTopOf="@+id/toolbarResumo"
        app:srcCompat="@drawable/three_dots_vertical_icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarResumo"
        app:layout_constraintVertical_bias="0.0">

        <ListView
            android:id="@+id/lvResumo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/TotalPagarLabelResumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalPagar"
        android:textColor="#050505"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/FormaPagamentoLabelResumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formaPagamento"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/sublinhado3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sublinhado"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FormaPagamentoLabelResumo"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/formasPagamentoEscolhaResumo"
        android:layout_width="409dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sublinhado3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumoEnderecoEntrega"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="start|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sublinhado4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnTelaInicial"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#6A03A9F4"
        android:text="@string/telaInicial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumoEnderecoEntrega"
        app:layout_constraintVertical_bias="0.17000002" />

</androidx.constraintlayout.widget.ConstraintLayout>